--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,5 +10,9 @@ $gray: #0E0000;
 $light-gray: #F4F4F4;
 $my-white: rgba(25, 201, 255, 0.025);
 $my-black: #000411;
-$sky-blue: #4AC2E8;
 $highlight-blue: rgba(25, 201, 255, 0.25);
+
+// iPiPi-colors:
+$sky-blue: #4AC2E8;
+$button-font-color: #FFFFFF;
+$icon-color: #333;
