--- a/app/assets/stylesheets/components/_icons.scss
+++ b/app/assets/stylesheets/components/_icons.scss
@@ -1,7 +1,7 @@
 .share-icons ul, li {
     display: flex;
     flex-direction: row;
-    color: #333;
+    color: icon-color;
     text-decoration: none;
     // text-align: center;
     justify-content: center;
