--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -2,3 +2,13 @@ body {
   background: white;
   color: $my-black;
 }
+
+.bathroom-window p {
+  margin: 0;
+}
+
+.bathroom-window  {
+  max-width: 200px;
+  min-width: 150px;
+  height: 100px;
+}
