--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -35,23 +35,23 @@ text-align: center;
 }
 
 .done-blue-btn {
-    position: absolute;
-      background-color:#5fbedc;
-    border-radius: 100px;
-    line-height: 0;
-    color: #FFFFFF;
-    width: 80%;
-    font-size: 3vh;
-    font-weight: 700;
-    padding: 11%;
-    -webkit-box-shadow: 1px 1px 7px 0px #000000;
-    -moz-box-shadow: 1px 1px 20px 0px #000000;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    text-align: center;
-    bottom: 26%;
-    left: 11%;
+  position: absolute;
+    background-color:#5fbedc;
+  border-radius: 100px;
+  line-height: 0;
+  color: #FFFFFF;
+  width: 80%;
+  font-size: 3vh;
+  font-weight: 700;
+  padding: 11%;
+  -webkit-box-shadow: 1px 1px 7px 0px #000000;
+  -moz-box-shadow: 1px 1px 20px 0px #000000;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+  bottom: 26%;
+  left: 11%;
 }
 
 .done-blue-btn:hover {
@@ -64,10 +64,11 @@ text-align: center;
   }
 
 .stars {
-    position: absolute;
-    top: 21vh;
-    left: 9vh;
+//     position: absolute;
+//     top: 21vh;
+//     left: 9vh;
 }
+
 .share-icons {
   position: absolute;
       bottom: 3vh;
@@ -76,4 +77,28 @@ text-align: center;
 
 .share-icons a {
   color: inherit;
+}
+
+.go-button {
+  background-color: #4AC2E8;
+  font-weight: bold;
+  font-size: 16px;
+  border-radius: 50%;
+  width : 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  display: inline-flex;
+  letter-spacing: 0px !important;
+}
+
+.go-button p {
+  color:white;
+  text-decoration: none;
+  }
+
+.go-button:hover {
+  font-weight: bolder;
+  box-shadow: 0 0 0.1rem 0.2rem rgba(25, 201, 255, 0.25);
+  text-decoration: none !important;
 }
