--- a/app/views/bathrooms/_info_window.html.erb
+++ b/app/views/bathrooms/_info_window.html.erb
@@ -1,8 +1,50 @@
+<div class="bathroom-window">
 
-<p><%= bathroom.location %></p>
-<p id="distance-to">0</p>
+  <div class="show-card-infos">
+    <i class="fas fa-map-marker-alt" id = "marker-icon"></i>
+    <p><em><%= bathroom.location %></em></p>
+  </div>
 
-<span class="hidden" id="card-bathroom-lat"><%= bathroom.latitude %></span>
-<span class="hidden" id="card-bathroom-lng"><%= bathroom.longitude %></span>
+  <div>
+    <p id="distance-to">0</p>
+  </div>
 
-<%= link_to 'GO', bathroom_path(bathroom.id), class: 'form-actions' %>
+  <div class="stars">
+    <% (bathroom.rating.to_i).times do %>
+      <i class="fas fa-star" id="star-icon"></i>
+    <% end %>
+    <% (5 - bathroom.rating.to_i).times do %>
+      <i class="far fa-star" id="star-icon"></i>
+    <% end %>
+  </div>
+
+  <span class="hidden" id="card-bathroom-lat"><%= bathroom.latitude %></span>
+  <span class="hidden" id="card-bathroom-lng"><%= bathroom.longitude %></span>
+  <span class="hidden" id="card-bathroom-id"><%= bathroom.id %></span>
+
+  <div>
+    <p class="btn go-button" id="google-maps">GO</p>
+  </div>
+
+<script>
+  // Give link to google maps with directions
+  const googleLink = document.getElementById("google-maps");
+  googleLink.addEventListener('click', (e) => {
+  e.preventDefault();
+  let originLat = 0;
+  let originLng = 0;
+  navigator.geolocation.getCurrentPosition(position => {
+    originLat = position.coords.latitude;
+    originLng = position.coords.longitude;
+    console.log(originLng);
+    const bathroomLat = parseFloat(document.getElementById("card-bathroom-lat").innerText);
+    const bathroomLng = parseFloat(document.getElementById("card-bathroom-lng").innerText);
+    const bathroomId = parseFloat(document.getElementById("card-bathroom-id").innerText);
+    const completeLink = "https://www.google.com/maps/dir/?api=1&origin=" + originLat + "," +
+      originLng + "&destination=" + bathroomLat + "," + bathroomLng + "&travelmode=walking";
+    const maps = window.open(completeLink, "_blank");
+    const done = window.location.replace("/bathrooms/" + bathroomId + "/done");
+    return maps, done;
+  });
+});
+</script>
