--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -37,13 +37,13 @@ body { margin: 0; padding: 0; }
 
 // NEW CODE
 .mapboxgl-canvas {
-  height:755px;
+  height:707px;
 }
 
 
 #map {
-    height: 93vh !important;
-    margin: 7.5vh 0 0 0;
+    height: 93.5vh !important;
+    margin: 6.5vh 0 0 0;
 
 }
 
@@ -63,4 +63,8 @@ body { margin: 0; padding: 0; }
 
 .geocoder:focus-within .mapboxgl-ctrl-geocoder:focus-within {
   opacity: 1;
+}
+
+.mapboxgl-ctrl-geocoder .suggestions {
+  width: auto;
 }
