--- a/app/views/bathrooms/_info_window.html.erb
+++ b/app/views/bathrooms/_info_window.html.erb
@@ -25,26 +25,4 @@
   <div>
     <p class="btn go-button" id="google-maps">GO</p>
   </div>
-
-<script>
-  // Give link to google maps with directions
-  const googleLink = document.getElementById("google-maps");
-  googleLink.addEventListener('click', (e) => {
-  e.preventDefault();
-  let originLat = 0;
-  let originLng = 0;
-  navigator.geolocation.getCurrentPosition(position => {
-    originLat = position.coords.latitude;
-    originLng = position.coords.longitude;
-    console.log(originLng);
-    const bathroomLat = parseFloat(document.getElementById("card-bathroom-lat").innerText);
-    const bathroomLng = parseFloat(document.getElementById("card-bathroom-lng").innerText);
-    const bathroomId = parseFloat(document.getElementById("card-bathroom-id").innerText);
-    const completeLink = "https://www.google.com/maps/dir/?api=1&origin=" + originLat + "," +
-      originLng + "&destination=" + bathroomLat + "," + bathroomLng + "&travelmode=walking";
-    const maps = window.open(completeLink, "_blank");
-    const done = window.location.replace("/bathrooms/" + bathroomId + "/done");
-    return maps, done;
-  });
-});
-</script>
+</div>
