--- a/app/views/bathrooms/done.html.erb
+++ b/app/views/bathrooms/done.html.erb
@@ -1,4 +1,5 @@
 <div class="done-container">
+  <div class="background-done"></div>
   <div class="done-card">
       <!--  -->
     <!-- EXIT BUTTOM -->
