--- a/app/views/bathrooms/done.html.erb
+++ b/app/views/bathrooms/done.html.erb
@@ -4,7 +4,7 @@
     <!-- EXIT BUTTOM -->
     <div class="back-icon">
       <%= link_to bathrooms_path do %>
-        <i class="fas fa-times" id = "back-icon"></i>
+        <i class="fas fa-times" id = "back-icon"> </i>
       <%end%>
     </div>
     <!--  -->
@@ -56,6 +56,7 @@
   const whatsappLink = document.getElementById("whatsapp-share");
   const bathroomLat = parseFloat(document.getElementById("toilet-lat").innerText);
   const bathroomLng = parseFloat(document.getElementById("toilet-lng").innerText);
-  const completeLink = "whatsapp://send?text=https://www.google.com/maps/search/?api=1&query=" + bathroomLat + "%2C" + bathroomLng;
+  const completeLink = "https://wa.me/?text=http://maps.google.com/maps?q=" + bathroomLat + "," + bathroomLng;
+  console.log(completeLink);
   whatsappLink.href = completeLink;
 </script>
