fixed search bar

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -52,13 +52,14 @@ body { margin: 0; padding: 0; }
   font-family: "Open Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
   position: relative;
   background-color: #fff;
-  width: 100%;
-  min-width: 240px;
-  z-index: 1;
-  border-radius: 50px;
-  transition: width .25s, min-width .25s;
-  margin: 4vh 5vh 0 0vh;
-  opacity: 0.8;
+    width: 90%;
+    min-width: 240px;
+    z-index: 1;
+    border-radius: 50px;
+    -webkit-transition: width .25s, min-width .25s;
+    transition: width .25s, min-width .25s;
+    margin: 4vh 1vh 0 2.4vh;
+    opacity: 0.8;
 }
 
 .geocoder:focus-within .mapboxgl-ctrl-geocoder:focus-within {
