--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>iPiPi</title>
+    <title>iPiPi - Find the closest public bathroom</title>
     <title><%= meta_title %></title>
     <meta name="description" content="<%= meta_description %>">
 
