--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -40,7 +40,10 @@
 }
 
 .stars {
-  margin-bottom: 4px;
+    margin-bottom: 4px;
+    position: absolute;
+    top: 20vh;
+    right: 7vh;
 }
 
 .txt-done {
