fixed stars final

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -39,11 +39,15 @@
   justify-content: center;
 }
 
-.stars {
+.stars-done {
     margin-bottom: 4px;
     position: absolute;
     top: 20vh;
     right: 7vh;
+}
+
+.stars {
+  margin-bottom: 4px;
 }
 
 .txt-done {
