--- a/app/views/bathrooms/done.html.erb
+++ b/app/views/bathrooms/done.html.erb
@@ -12,7 +12,7 @@
     <div class="txt-done">
       <h1> <strong>THANK YOU !</strong></h1>
     </div>
-    <div class="stars">
+    <div class="stars-done">
     <!-- ADD RATING SYSTEM -->
     <span data-id="<%= @bathroom.id %>" id="bathroom-id"></span>
     <i data-id="1" class="far fa-star fa-2x" id="star-icon"></i>
