--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,9 +2,9 @@
   <div class="home-txt">
     <h3>iPiPi</h3>
     <h1><strong>NEED A BATHROOM ?</strong></h1>
-    <p> <em>Cheirinho de sucesso</em></p>
+    <p> <em>QUICK ! Come with me !</em></p>
   </div>
   <div class="home-button">
-    <%= link_to 'find a bathroom', bathrooms_path, :class => "home-button2 main-btn" %>
+    <%= link_to 'RUN !', bathrooms_path, :class => "home-button2 main-btn" %>
   </div>
 </div>
