changed buttom layout

--- a/app/views/bathrooms/done.html.erb
+++ b/app/views/bathrooms/done.html.erb
@@ -5,7 +5,7 @@
     <!-- EXIT BUTTOM -->
     <div class="back-icon">
       <%= link_to bathrooms_path do %>
-        <i class="fas fa-times" id = "back-icon"> </i>
+        <i class="fas fa-times-circle" id = "back-icon"> </i>
       <%end%>
     </div>
     <!--  -->
