added custom message field wpp

--- a/app/views/bathrooms/done.html.erb
+++ b/app/views/bathrooms/done.html.erb
@@ -57,7 +57,7 @@
   const whatsappLink = document.getElementById("whatsapp-share");
   const bathroomLat = parseFloat(document.getElementById("toilet-lat").innerText);
   const bathroomLng = parseFloat(document.getElementById("toilet-lng").innerText);
-  const completeLink = "https://wa.me/?text=http://maps.google.com/maps?q=" + bathroomLat + "," + bathroomLng;
+  const completeLink = "https://wa.me/?text=http://maps.google.com/maps?q=" + bathroomLat + "," + bathroomLng + "  || HEY ! You can find me here !! || iPiPi ||";
   console.log(completeLink);
   whatsappLink.href = completeLink;
 </script>
