--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -15,4 +15,6 @@ $headers-font: "Nunito", "Helvetica", "sans-serif";
 // }
 // $my-font: "Font Name";
 
-$map-font: "Open Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
+$map-font: 'Sen', sans-serif;
+$done-page: 'Raleway', sans-serif;
+$info-window: 'Sen', sans-serif;
