--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -51,6 +51,7 @@
   text-align: center;
   bottom: 26%;
   left: 11%;
+  font-family: $done-page;
 }
 
 .done-blue-btn:hover {
@@ -86,6 +87,7 @@
   align-items: center;
   display: inline-flex;
   letter-spacing: 0px !important;
+  font-family: $info-window;
 }
 
 .go-button p {
