--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
 <div class="home">
   <div class="home-txt">
     <h3>iPiPi</h3>
-    <h1><strong>NEED A BATHROOM ?</strong></h1>
+    <h1><strong>NEED A</strong></h1>
+    <h1 style="margin: 0;"><strong>BATHROOM ?</strong></h1>
     <p> <em>QUICK! Come with me!</em></p>
   </div>
   <div class="home-button">
